--- a/plotter/plotter/mainwindow.ui
+++ b/plotter/plotter/mainwindow.ui
@@ -22,6 +22,12 @@
     <height>800</height>
    </size>
   </property>
+  <property name="baseSize">
+   <size>
+    <width>1000</width>
+    <height>800</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
@@ -32,7 +38,7 @@
      <x>0</x>
      <y>0</y>
      <width>1000</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
